--- a/view/index.handlebars
+++ b/view/index.handlebars
@@ -1,7 +1,70 @@
+<!-- Image and text -->
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="/">
+    <img src="/assets/img/logo.png" width="300" class="d-inline-block align-top burger-logo"
+      alt="Eat Da Burger logo">
+  </a>
+</nav>
+
+<!-- body -->
 <div class="container">
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <h1>Eat-Da-Burger</h1>
+  <div class="row">
+    <div class="col-sm-4">
+      <form action="/insertOne" method="POST">
+        <div class="form-group">
+          <label for="burger">
+            <h3>Create a Burger</h3>
+          </label>
+          <input name="burger_name" type="text" class="form-control" id="burgerName" aria-describedby="burgerName"
+            placeholder="Enter burger name">
         </div>
+        <button type="submit" class="btn btn-outline create-burger">Place Order</button>
+      </form>
     </div>
+
+    <!-- Order List -->
+    <div class="col-sm-4">
+      <div class="order-list">
+        <h3>Order List</h3>
+        {{#each burgers}}
+        {{#unless this.devoured}}
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+            <h6>{{this.burger_name}}</h6>
+            <form action="/updateOne/{{this.id}}" method="POST">
+              <input type="hidden" name="id" value="{{this.id}}">
+              <input type="hidden" name="devoured" value="1">
+              <button class="btn btn-sm btn-outline m-1 devour-btn float-right">Eat<i class="fas fa-utensils
+                  ml-2"></i>
+              </button>
+            </form>
+        </li>
+        {{/unless}}
+        {{/each}}
+      </div>
+    </div>
+
+    <!-- Devour List -->
+    <div class="col-sm-4">
+      <div class="devour-list">
+        <h3>Devour List</h3>
+  
+            {{#each burgers}}
+              {{#if this.devoured}}
+                <li class="list-group-item d-flex justify-content-between lh-condensed">
+                    <h6>{{this.burger_name}}</h6>
+                    <form action="/deleteOne/{{this.id}}" method="DELETE">
+                      <input type="hidden" name="id" value="{{this.id}}">
+                      <input type="hidden" name="devoured" value="1">
+                      <button class="btn btn-sm btn-outline m-1 devour-btn float-right">Delete<i class="fas fa-utensils
+                          ml-2"></i>
+                      </button>
+                    </form>
+                </li>
+              {{/if }}
+            {{/each }}
+
+          </div>
+      </div>
+
+  </div>
 </div>
