--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/public/assets/css/burger_style.css"
+    <link rel="stylesheet" href="/public/assets/css/burger_style.css">
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
 </head>
 <body>
     {{{body}}}
-
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script src="/assets/js/script.js"></script>
+	
 </body>
 </html>
