--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <!-- Image and text -->
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="/">
-    <img src="/assets/img/logo.png" width="300" class="d-inline-block align-top burger-logo"
+    <img src="/public/assets/image/download.png" width="300" class="d-inline-block align-top burger-logo"
       alt="Eat Da Burger logo">
   </a>
 </nav>
