--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,7 +1,9 @@
+
+
 body {
-    background-color: #ffffff;
+    background-color:lightblue;
     font-family: Roboto, sans-serif;
-    color: #61a11e;
+    color: hsl(89, 69%, 37%);
     height: 100%;
     margin: 0;
   
