--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,9 @@
 <!-- Image and text -->
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="/">
-    <img src="/assets/img/logo.png" width="300" class="d-inline-block align-top burger-logo"
-      alt="Eat Da Burger logo">
-  </a>
-</nav>
+<div class="container">
+    <div class="jumbotron text-center bg-danger text-white"><h1>EAT DAT BURGER Burger Bar!</h1></div>
+    <img src="/public/assets/image/download.png" class="img-fluid" alt="Burger image">
+        <p class="lead text-center">Welcome to EAT DAT Burger Bar, home of the best burgers around!</p>
+</div>
 
 <!-- body -->
 <div class="container">
