--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,9 @@
 <!-- Image and text -->
 <div class="container">
-    <div class="jumbotron text-center bg-danger text-white"><h1>EAT DAT BURGER Burger Bar!</h1></div>
-    <img src="/public/assets/image/download.png" class="img-fluid" alt="Burger image">
-        <p class="lead text-center">Welcome to EAT DAT Burger Bar, home of the best burgers around!</p>
+    <div class="jumbotron text-center bg-danger text-white"><h1>EAT DA BURGER!</h1></div>
+    <h1 class="display-4 text-center"><img src="https://user-images.githubusercontent.com/70309736/101441173-22a3fe00-38de-11eb-9337-32f088248f93.png" width="200" class="d-inline-block align-top burger-logo" alt="Burger image"></h1>>
+
+        <p class="lead text-center">Welcome!</p>
 </div>
 
 <!-- body -->
