--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,13 +7,12 @@
     {{!-- Bootstrap cdn --}}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    {{!-- fontawesome cdn--}}
   
     <link rel="stylesheet" type="css" href="/public/assets/css/burger_style.css">
 </head>
 <body>
-   
-    {{{body}}}
-	
+    <div class="container">
+        {{{body}}} 
+    </div>
 </body>
 </html>
